[package]
name = "dnsbase"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.49", features = ["derive", "env"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
trust-dns-server = "0.23.2"
