[package]
name = "dnsraw"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dnsraw"
path = "src/main.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1


[dependencies]
curl = "0.4.49"
hickory-proto = "0.25.2"
hickory-resolver = "0.25.2"
reqwest = "0.12.24"
tokio = {version = "1.48.0", features = ["full"]}
trust-dns-resolver = "0.23.2"
